[gd_scene load_steps=24 format=2]

[ext_resource path="res://robo_enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Charsets/robobody.png" type="Texture" id=2]
[ext_resource path="res://Assets/Charsets/robobody2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Charsets/robobody3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Charsets/robobody4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Charsets/leftclaw_1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Charsets/leftclaw_2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Charsets/rightclaw_1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Charsets/rightclaw_2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Charsets/robohelix1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Charsets/robohelix2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Charsets/robohelix3.png" type="Texture" id=12]
[ext_resource path="res://Assets/Charsets/robohelix4.png" type="Texture" id=13]
[ext_resource path="res://Assets/Charsets/robohelix5.png" type="Texture" id=14]
[ext_resource path="res://Assets/Animations/light.png" type="Texture" id=15]
[ext_resource path="res://Assets/SFX/buzz.wav" type="AudioStream" id=16]
[ext_resource path="res://enemy_hp_bar.tscn" type="PackedScene" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="Animation" id=5]
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 10, 10, 10, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.3, 0.5, 0.3 ]
}

[node name="robo_enemy" type="Area2D"]
collision_mask = 49153
script = ExtResource( 1 )

[node name="robobody" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 2
playing = true

[node name="leftclaw" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
playing = true

[node name="rightclaw" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
frame = 1
playing = true

[node name="helix" type="AnimatedSprite" parent="."]
position = Vector2( 0, 3 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="collision" type="CollisionPolygon2D" parent="."]
build_mode = 1
polygon = PoolVector2Array( -27.4457, 11.5393, -15.2153, 23.5493, -5.62936, 12.0902, 5.93993, 12.0902, 15.4157, 24.2104, 27.7563, 11.5393, 18.0601, 0.741251, 18.1703, -10.3873, -0.340538, -22.3973, -18.3005, -11.379, -18.1903, -0.250402 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 5 )

[node name="eye" type="Light2D" parent="."]
texture = ExtResource( 15 )
texture_scale = 0.313526
color = Color( 1, 0, 0, 1 )
energy = 1.75

[node name="pulse" type="AnimationPlayer" parent="eye"]
anims/pulse = SubResource( 6 )

[node name="visibility" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 3, 3 )

[node name="buzz" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
volume_db = -8.0
pitch_scale = 0.7
autoplay = true
max_distance = 300.0

[node name="enemy_hp_bar" parent="." instance=ExtResource( 17 )]
position = Vector2( 0, 25 )

[connection signal="screen_entered" from="visibility" to="." method="_on_visibility_screen_entered"]
[connection signal="screen_exited" from="visibility" to="." method="_on_VisibilityNotifier2D_screen_exited"]
